log
Fri 17 Mar 2023 11:49:12 AM UTC: 
 tests:  0|7
total_score: 0/70
9378b78
Fri 17 Mar 2023 11:49:34 AM UTC: 
 exercises.c | 37 ++++++++++++++++++++++++++++++++-----
 1 file changed, 32 insertions(+), 5 deletions(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:30:20: error: ‘i’ undeclared (first use in this function)
   30 |   int menorTmp = a[i];
      |                    ^
exercises.c:30:20: note: each undeclared identifier is reported only once for each function it appears in
exercises.c:47:22: error: expected ‘;’ before ‘}’ token
   47 |       *max = mayorTmp
      |                      ^
      |                      ;
   48 |     }
      |     ~                 
Compilation failed
021287f
Fri 17 Mar 2023 11:50:21 AM UTC: 
 exercises.c | 3 ++-
 1 file changed, 2 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘arrayMaxMin’:
exercises.c:48:22: error: expected ‘;’ before ‘}’ token
   48 |       *max = mayorTmp
      |                      ^
      |                      ;
   49 |     }
      |     ~                 
Compilation failed
aaffb15
Fri 17 Mar 2023 11:50:29 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|5
total_score: 20/70
5053b72
Fri 17 Mar 2023 11:51:35 AM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
21a3e2f
Fri 17 Mar 2023 12:05:15 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  0|0
ab946b5
Fri 17 Mar 2023 12:12:12 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘crearVector’:
exercises.c:96:19: error: assignment to ‘int’ from ‘int *’ makes integer from pointer without a cast [-Werror=int-conversion]
   96 |   vctr->capacidad = (int*) malloc (sizeof(int));
      |                   ^
cc1: all warnings being treated as errors
Compilation failed
b48460b
Fri 17 Mar 2023 12:12:55 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
6e04f71
Fri 17 Mar 2023 12:13:57 PM UTC: 
 exercises.c | 5 ++++-
 1 file changed, 4 insertions(+), 1 deletion(-)
 tests:  4|3
total_score: 40/70
15ac069
Fri 17 Mar 2023 12:18:02 PM UTC: 
 exercises.c | 5 +++--
 1 file changed, 3 insertions(+), 2 deletions(-)
 tests:  4|3
total_score: 40/70
29044fa
Fri 17 Mar 2023 12:19:37 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:108:4: error: ‘v’ is a pointer; did you mean to use ‘->’?
  108 |   v.datos[i]=valor;
      |    ^
      |    ->
Compilation failed
c407a9f
Fri 17 Mar 2023 12:19:43 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
In file included from test.c:5:
exercises.c: In function ‘asignarValor’:
exercises.c:108:5: error: ‘v’ is a pointer; did you mean to use ‘->’?
  108 |   *v.datos[i]=valor;
      |     ^
      |     ->
Compilation failed
fd759bb
Fri 17 Mar 2023 12:20:01 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  0|0
0c3bf5c
Fri 17 Mar 2023 12:20:36 PM UTC: 
 exercises.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  3|4
total_score: 30/70
3eaa809
